src/assets/sass/components/_app.sass
#app
  font-family: $main-font
  -webkit-font-smoothing: antialiased
  -moz-osx-font-smoothing: grayscale
  text-align: center
  color: $black

a
  font-weight: bold
  color: $black
  &.router-link-exact-active
    color: $green

a:hover
  font-weight: bold
  color: $brown

.btn-green
  color: #fff
  background-color: $green
  border-color: $green

.btn-green:hover
  color: $white
  background-color: $brown
  border-color: $brown

